--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link href="/favicon.png" rel="icon" />
-        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <title>Seehar Design Vue</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script src="/src/main.ts" type="module"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seehar Design Vue</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
